--- a/book-shop/public/index.html
+++ b/book-shop/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <title>Books r us</title>
   </head>
   <body>
@@ -10,4 +11,5 @@
     <div id="root"></div>
 
   </body>
+
 </html>
